Update group names in localstorage - Fix bug where cursor jumps to end of input on edit

--- a/src/widgets/EditableHeader.scss
+++ b/src/widgets/EditableHeader.scss
@@ -10,7 +10,6 @@
     @include body;
     padding: 0.5rem 4px;
     font-size: 1rem;
-    letter-spacing: 0.05rem;
     background: var(--background);
     color: var(--turbo-blue);
     // To avoid a slight shift when the input's border is shown,
